welcome.lessons.welcome.array.maxvalue.Extrema.scala.error
extrema:10: error: not found: value Maths
	Maths.abs( maxi- min)
        ^