welcome.lessons.welcome.array.maxvalue.Extrema.scala.code
def extrema(nums:Array[Int]): Int = {
	var maxi = -1000000
	var min = 1000000
	for (i <- 0 to nums.length -1)
		{ if (maxi < nums(i))
			 {maxi = nums(i)}
		  if (min > nums(i))
		  	 {min = nums(i)}
		}
	Maths.abs( maxi- min)
}
